--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
 					<h1>Email Design</h1>
-					<h2>RESPONSIVE LAYOUT | SKETCH</h2>
+					<h2>Branding, Templates</h2>
 				  	</div>
 				</a>
 				<img src="img/EmailTumbnail_.gif" title="Sweepstakes">
@@ -43,7 +43,7 @@
 				<a class="overlay" href="sweepstakes.html">
 				  <div class="overlay-text">
 					<h1>Studio Photography and Art Direction</h1>
-					<h2>STUDIO PHOTOGRAPHY | EDITING | ASSET PRODUCTION</h2>
+					<h2>Studio Photography, Photo Editing</h2>
 				  	</div>
 				</a>
 				<img src="img/project2_homepage.png" title="Sweepstakes" alt="Sweepstakes">
@@ -51,13 +51,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="advertising.html">
+				<a class="overlay" href="section3.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing and Advertising Collateral</h1>
-					<h2>CAMPAIGNS | DISPLAY ADS | SOCIAL MEDIA </h2>
+				  	<h1>Social Media</h1>
+					<h2>Campaigns</h2>
 				  	</div>
 				</a>
-				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
+				<img src="img/index/section3.jpg" title="SocialMedia" alt="Advertising">
 			</div>
 		</div>
 </div>
@@ -91,7 +91,7 @@
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
 				  	<h1>See Her Excel Scholarship</h1>
-					<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
+					<h2>Marketing Campaign</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
@@ -117,7 +117,7 @@
 				<a class="overlay" href="section8.html">
 				  <div class="overlay-text">
 				  	<h1>Immersive Remote Learning</h1>
-					<h2>Video Campaign</h2>
+					<h2>Marketing Video Campaign</h2>
 				  	</div>
 				</a>
 				<img src="img/project8_homepage.jpg" title="Branding">
@@ -135,7 +135,6 @@
 			</div>
 		</div>
 </div>
-
 
 
 
