--- a/section3.html
+++ b/section3.html
@@ -35,9 +35,9 @@
 <div class="grid head">
 		<div class="col-1-1">
 			<div class="projectdescription">
-				<h2>CAMPAIGNS | DISPLAY ADS | SOCIAL MEDIA </h2>
-				<h1>Marketing/Advertising Collateral</h1>
-				<p></p>
+				<h2>Campaigns</h2>
+				<h1>Social Media</h1>
+				<p>Various Campaign Developements and social media posts.</p>
 			</div>
 		</div>
 </div>
@@ -45,120 +45,23 @@
 
 <div class="grid manipulation">
 	<div class="col-1-1">
-		<div class="col-2-3">
-			<div class="project1">
-				<a href="img/VoteSticker_InstagramandMockup.gif" target="_blank"> 
-				<img src="img/VoteSticker_InstagramandMockup.gif">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p>Around the midterm elections early November 2018, I paired and concepted with the social media manager on various social media posts - the goal aimed at engaing General Assembly's community. 
-				<br><br>
-				We decided to create and distrubute variations of 'VOTE' / 'I'M VOTING FOR ____' / 'I VOTED' stickers acorss U.S. campuses that students and faculty could wear and share to spread awareness.  </p>
-			</div>
-		</div>
-			<div class="col-2-3">
-			<div class="project1">
-				<a href="img/IfYoureReadingThisItsNotTooLateToVote_InstagramFB_1080x1080.jpg" target="_blank">
-				<img src="img/IfYoureReadingThisItsNotTooLateToVote_InstagramFB_1080x1080.jpg">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p>Interested in testing niche content, I created a parody graphic around voting based off of Drake's 'If You're Reading This It's Too Late' album art. This was posted on social media mid-term election day. <a href="https://www.instagram.com/p/Bp2Dub1BpXa/" target="_blank"><u>View the live post here.</u></a>
-			</div>
-		</div>
-		<div class="col-2-3">
-			<div class="project1">
-				<a href="img/GAScholarship_LandingPage.gif" target="_blank">
-				<img src="img/GAScholarship_LandingPage.gif">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p>
-				<b>The Request:</b> Create a visual narrative and branding around awarding scholarships to two applicants currently out of work.
-				<br><br>
-				<b>The Concept: Wear a New Hat for Your Future in Tech</b> Start fresh with a brand new career in tech, or try your hand at today’s most relevant skills: coding, data, design, marketing, and product development.
-				<br><br>
-				<b>The Design:</b> Visually related trying out a topic of interest to the concept of trying on a new hat, 'stepping into someone else's shoes.' <a href="https://www.instagram.com/p/Bbj5PyAl5V4/" target="_blank"><u>View the live Instagram post here.</u></a>
-			</div>
-		</div>
-		<div class="col-2-3">
-			<div class="project1">
-				<a href="img/LetsGetDigital.gif" target="_blank">
-				<img src="img/LetsGetDigital.gif">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p>
-				Proposed direction for a campaign around taking $500 off a 1-week course, either on-campus or remote format, during the summer. Created a visual parody between the speed and intensity of leveling up your career with a skill-set learned in 1 week to an 80s themed workout class.
-			</div>
-		</div>
-	</div>
-</div>
-
-<br><br>
-
-<div class="grid manipulation">
-	<div class="col-2-3">
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/SEILaunch_GDNPaid_Concept3_A_300x600.jpg"> 
-				<img src="img/SEILaunch_GDNPaid_Concept3_A_300x600.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/SEILaunch_GDNPaid_Concept2_B_300x600.jpg"> 
-				<img src="img/SEILaunch_GDNPaid_Concept2_B_300x600.jpg" target="_blank">
-			</div>
-		</div>
-
-	</div>
-	<div class="col-1-3">
-		<div class="project1">
-			<p><b>Course Specific GDN Ads: Software Engineering launch</b> Pairing with a copywriter, we concepted two variations of creative, each with sets of copy that had variations of plain-spoken and punny.</p>
-			</a>
-		</div>
-	</div>
-</div>
-
-<div class="grid manipulation">
-	<div class="col-2-3">
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/SEILaunch_GDNPaid_Concept1_A_336x280.jpg"> 
-				<img src="img/SEILaunch_GDNPaid_Concept1_A_336x280.jpg" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/SEILaunch_GDNPaid_Concept1_B_336x280.jpg"> 
-				<img src="img/SEILaunch_GDNPaid_Concept1_B_336x280.jpg" target="_blank">
-			</div>
-		</div>
-	</div>
-</div>
-
-<br><br>
-
-
-
-<div class="grid head">
-	<div class="project1body">
 		<div class="col-1-1">
-		<img src="img/project3_bodyimage.png">
+			<div class="project1">
+				<img src="img/section3/SocialMedia1.jpg" target="_blank">
+				<br><br>
+				<img src="img/section3/SocialMedia2.jpg" target="_blank">
+				<br><br>
+				<img src="img/section3/SocialMedia3.jpg" target="_blank">
+				</a>
+			</div>
+		</div>
 	</div>
 </div>
+
+<br><br><br>
+
+
+
 
 
 <!-- three collumns and 2 rows -->
@@ -189,13 +92,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="advertising.html">
+				<a class="overlay" href="section3.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing and Advertising Collateral</h1>
-					<h2>CAMPAIGNS | DISPLAY ADS | SOCIAL MEDIA </h2>
+				  	<h1>Social Media</h1>
+					<h2>Campaigns</h2>
 				  	</div>
 				</a>
-				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
+				<img src="img/index/section3.jpg" title="SocialMedia" alt="Advertising">
 			</div>
 		</div>
 </div>
@@ -273,6 +176,7 @@
 			</div>
 		</div>
 </div>
+
 
 
 
