--- a/section5.html
+++ b/section5.html
@@ -69,13 +69,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="advertising.html">
+				<a class="overlay" href="section3.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing and Advertising Collateral</h1>
-					<h2>CAMPAIGNS | DISPLAY ADS | SOCIAL MEDIA </h2>
+				  	<h1>Social Media</h1>
+					<h2>Campaigns</h2>
 				  	</div>
 				</a>
-				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
+				<img src="img/index/section3.jpg" title="SocialMedia" alt="Advertising">
 			</div>
 		</div>
 </div>
@@ -153,6 +153,7 @@
 			</div>
 		</div>
 </div>
+
 
 
 
