--- a/printandbrand.html
+++ b/printandbrand.html
@@ -32,7 +32,7 @@
 <div class="grid header1">
 	<div class="col-1-1">
 		<div class="projectdescription">
-			<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
+			<h2>Campaign</h2>
 			<h1>See Her Excel Scholarship</h1>
 			<p><b>The Request:</b> Create a visual narrative and branding campaign around offering a scholarship to women for long-form tech education courses.
 			<br><br>
@@ -168,13 +168,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="advertising.html">
+				<a class="overlay" href="section3.html">
 				  <div class="overlay-text">
-				  	<h1>Marketing and Advertising Collateral</h1>
-					<h2>CAMPAIGNS | DISPLAY ADS | SOCIAL MEDIA </h2>
+				  	<h1>Social Media</h1>
+					<h2>Campaigns</h2>
 				  	</div>
 				</a>
-				<img src="img/project3_homepage.png" title="Sweepstakes" alt="Advertising">
+				<img src="img/index/section3.jpg" title="SocialMedia" alt="Advertising">
 			</div>
 		</div>
 </div>
@@ -252,6 +252,7 @@
 			</div>
 		</div>
 </div>
+
 
 
 
