--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Amanda Jennings Design - About Amanda</title>
+  <title>Amanda Jennings Design</title>
+  <link rel="shortcut icon" type="image/jpg" href="img/index/favicon2.png"/>
 </head>
 
 <body>
