--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Amanda Jennings Design</title>
+  <link rel="shortcut icon" type="image/jpg" href="img/index/favicon2.png"/>
 </head>
+
+<link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16">
+
 
 <body>
 <?php include_once("analyticstracking.php") ?>
@@ -40,13 +44,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="sweepstakes.html">
+<!-- 				<a class="overlay" href="sweepstakes.html"> -->
 				  <div class="overlay-text">
-					<h1>Studio Photography and Art Direction</h1>
-					<h2>Studio Photography, Photo Editing</h2>
+<!-- 					<h1>Studio Photography and Art Direction</h1>
+					<h2>Studio Photography, Photo Editing</h2> -->
 				  	</div>
 				</a>
-				<img src="img/project2_homepage.png" title="Sweepstakes" alt="Sweepstakes">
+				<img src="img/index/section2.jpg" title="Sweepstakes" alt="Sweepstakes">
 			</div>
 		</div>
 		<div class="col-1-3">
