--- a/section8.html
+++ b/section8.html
@@ -8,6 +8,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Amanda Jennings Design</title>
+  <link rel="shortcut icon" type="image/jpg" href="img/index/favicon2.png"/>
 </head>
 
 <body>
@@ -78,7 +79,7 @@
 				<a class="overlay" href="emaildesigns.html">
 				  <div class="overlay-text">
 					<h1>Email Design</h1>
-					<h2>RESPONSIVE LAYOUT | SKETCH</h2>
+					<h2>Branding, Templates</h2>
 				  	</div>
 				</a>
 				<img src="img/EmailTumbnail_.gif" title="Sweepstakes">
@@ -86,13 +87,13 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="sweepstakes.html">
+<!-- 				<a class="overlay" href="sweepstakes.html"> -->
 				  <div class="overlay-text">
-					<h1>Studio Photography and Art Direction</h1>
-					<h2>STUDIO PHOTOGRAPHY | EDITING | ASSET PRODUCTION</h2>
+<!-- 					<h1>Studio Photography and Art Direction</h1>
+					<h2>Studio Photography, Photo Editing</h2> -->
 				  	</div>
 				</a>
-				<img src="img/project2_homepage.png" title="Sweepstakes" alt="Sweepstakes">
+				<img src="img/index/section2.jpg" title="Sweepstakes" alt="Sweepstakes">
 			</div>
 		</div>
 		<div class="col-1-3">
@@ -137,7 +138,7 @@
 				<a class="overlay" href="printandbrand.html">
 				  <div class="overlay-text">
 				  	<h1>See Her Excel Scholarship</h1>
-					<h2>CAMPAIGN | VISUAL NARRATIVE</h2>
+					<h2>Marketing Campaign</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Branding">
@@ -163,7 +164,7 @@
 				<a class="overlay" href="section8.html">
 				  <div class="overlay-text">
 				  	<h1>Immersive Remote Learning</h1>
-					<h2>Video Campaign</h2>
+					<h2>Marketing Video Campaign</h2>
 				  	</div>
 				</a>
 				<img src="img/project8_homepage.jpg" title="Branding">
