--- a/section7.html
+++ b/section7.html
@@ -69,13 +69,13 @@
 <div class="grid threecolumn">
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="emaildesigns.html">
+				<a class="overlay" href="section1.html">
 				  <div class="overlay-text">
 					<h1>Email Design</h1>
 					<h2>Branding, Templates</h2>
 				  	</div>
 				</a>
-				<img src="img/EmailTumbnail_.gif" title="Sweepstakes">
+				<img src="img/index/section1.jpg" title="Sweepstakes">
 			</div>
 		</div>
 		<div class="col-1-3">
@@ -128,7 +128,7 @@
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-				<a class="overlay" href="printandbrand.html">
+				<a class="overlay" href="section6.html">
 				  <div class="overlay-text">
 				  	<h1>See Her Excel Scholarship</h1>
 					<h2>Marketing Campaign</h2>
