--- a/section2.html
+++ b/section2.html
@@ -35,7 +35,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 
-
 <div class="grid header">
 		<div class="col-1-1">
 			<div class="project6header">
@@ -44,29 +43,45 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 </div>
 
-<!-- <div class="grid header1">
+<div class="grid header1">
 	<div class="col-1-1">
 		<div class="projectdescription">
-			<h2>EVENT | FUNDRAISER</h2>
-			<h1>Cluck Bigotry</h1>
-			<p><b>The Request:</b> To create a poster and visual narrative for a fried-chicken making fundraiser during pride month. Why fried chicken, you ask? You may be familiar with the negative impact Chick-fil-a has on the LGBTQA+ community, and we've all heard "...but the sandwiches are so good..." At this fundraiser, their recipe has been knocked off AND the proceeds go to a good cause, benefiting LGBTQA+ youth.
+			<h2>Campaign</h2>
+			<h1>See Her Excel Scholarship</h1>
+			<p><b>The Request:</b> Create a visual narrative and branding campaign around offering a scholarship to women for long-form tech education courses.
 			<br><br>
-			<b>The Process:</b> I paired with a project manager and copywriter to brainstorm concepts. We determined what elements needed to be on the poster (i.e. the who, what, when, where, whys) and developed the tone we would like to convey through copy/visuals.
+			<b>The Narrative:</b> The See Her Excel (SHE) Scholarship name derived through wanting to encourage propelling women forward and helping them take their first step towards pursuing a career in tech.
 			<br><br>
-			<b>The Visuals:</b> I approached designing the poster with highlighing the pride colored buns of the chicken chicken sandwich to be the main focus, surrounded by minimalistic black on white palette. Emphasizing that while Chik-fil-a drives a negative impact, the community comes together to continue to provide support towards the LGBTQA+ community.
+			<b>The Visuals:</b> A dynamic collection of historical women pioneers such as Ada Lovelace, Grace Hopper, etc. juxtaposed in a grid with present day students. Together the grid creates cohesion across generations of women making advances and shows the magnitude of collective contribution. 
 			</p>
 		</div>
 	</div>
-</div> -->
+</div>
+
 
 <div class="grid manipulation">
 	<div class="col-1-1">
 		<div class="col-1-1">
 			<div class="project1">
-				<img src="img/section7/StateofSkills2.jpg" target="_blank">
-				<br><br>
-				<img src="img/section7/StateofSkills3.jpg" target="_blank">
-				<br><br><br><br>
+				<a href="img/Q1SHE_OrganicSocial_FacebookTwitter_1200x627.gif" target="_blank"> 
+				<img src="img/Q1SHE_OrganicSocial_FacebookTwitter_1200x627.gif"> </a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="grid manipulation">
+	<div class="col-1-1">
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/SeeHerExcel_Tote.jpg"> 
+				<img src="img/SeeHerExcel_Tote.jpg" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p><b>See Her Excel: Tote</b> Developed for brand awareness to the campaign.</p>
 				</a>
 			</div>
 		</div>
@@ -74,6 +89,69 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 
+<div class="grid manipulation">
+	<div class="col-1-1">
+		<div class="col-2-3">
+			<div class="project1">
+				<a href="img/SeeHerExcel_Landingpage.png"> 
+				<img src="img/SeeHerExcel_Landingpage.png" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-3">
+			<div class="project1">
+				<p><b>See Her Excel: Landing Page</b> Designed the scholarship's landing page pairing with a marketer and copy writer. Created in the platform Unbounce, the page from top to bottom: displays a high-level description of the offer paired with a dropdown lead form, highlights narratives of women featured in visuals of the campaign, an eye-catching elegibility banner, and descriptions of the courses this scholarship is available for.</p>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="grid manipulation">
+	<div class="col-2-3">
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/Q1SHE_GDNAds_V1_300x600.gif"> 
+				<img src="img/Q1SHE_GDNAds_V1_300x600.gif" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/Q1SHE_GDNAds_V2_300x600.jpg"> 
+				<img src="img/Q1SHE_GDNAds_V2_300x600.jpg" target="_blank">
+			</div>
+		</div>
+	</div>
+	<div class="col-1-3">
+		<div class="project1">
+			<p><b>See Her Excel: Google Display Network Paid Ads</b> Created two sets of scholarship creative to test against eachother. Once tested, the winning concept paired with creative between the ad on the left (animation of rotating photography, straight forward language) and the ad on the right (colorful background with aspirational language highlighting YOU could be the next leader in tech by learning these offered skills), the ad on the left performed better. These results could be based on the inclusion of photography of people and the eye-catching rotation of the .gif.</p>
+			</a>
+		</div>
+	</div>
+</div>
+
+<div class="grid manipulation">
+	<div class="col-2-3">
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/Q1SHE_GDNAds_V1_336x280.gif"> 
+				<img src="img/Q1SHE_GDNAds_V1_336x280.gif" target="_blank">
+				</a>
+			</div>
+		</div>
+		<div class="col-1-2">
+			<div class="project1">
+				<a href="img/Q1SHE_GDNAds_V2_336x280.jpg"> 
+				<img src="img/Q1SHE_GDNAds_V2_336x280.jpg" target="_blank">
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<br><br><Br>
 
 
 <!-- three collumns and 2 rows -->
@@ -188,6 +266,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 		</div>
 </div>
+
+
 
 
 
