--- a/section8.html
+++ b/section8.html
@@ -101,13 +101,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-<!-- 				<a class="overlay" href="sweepstakes.html"> -->
+				<a class="overlay" href="section2.html">
 				  <div class="overlay-text">
-<!-- 					<h1>Studio Photography and Art Direction</h1>
-					<h2>Studio Photography, Photo Editing</h2> -->
+					<h1>See Her Excel Scholarship</h1>
+					<h2>Branding Campaign</h2>
 				  	</div>
 				</a>
-				<img src="img/index/section2.jpg" title="Sweepstakes" alt="Sweepstakes">
+				<img src="img/project6_homepage.png" title="Sweepstakes" alt="Sweepstakes">
 			</div>
 		</div>
 		<div class="col-1-3">
@@ -151,11 +151,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="project1">
 				<a class="overlay" href="section6.html">
 				  <div class="overlay-text">
-				  	<h1>See Her Excel Scholarship</h1>
-					<h2>Marketing Campaign</h2>
+				  	<h1>General Assembly Marketing Campaigns</h1>
+					<h2></h2>
 				  	</div>
 				</a>
-				<img src="img/project6_homepage.png" title="Branding">
+				<img src="img/index/section6.jpg" title="Branding">
 			</div>
 		</div>
 </div>
@@ -178,7 +178,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<a class="overlay" href="section8.html">
 				  <div class="overlay-text">
 				  	<h1>Immersive Remote Learning</h1>
-					<h2>Marketing Video Campaign</h2>
+					<h2>Video Campaign</h2>
 				  	</div>
 				</a>
 				<img src="img/project8_homepage.jpg" title="Branding">
