--- a/section6.html
+++ b/section6.html
@@ -43,7 +43,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 </div>
 
-<div class="grid header1">
+<!-- <div class="grid header1">
 	<div class="col-1-1">
 		<div class="projectdescription">
 			<h2>Campaign</h2>
@@ -56,95 +56,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</p>
 		</div>
 	</div>
-</div>
+</div> -->
 
 
 <div class="grid manipulation">
 	<div class="col-1-1">
 		<div class="col-1-1">
 			<div class="project1">
-				<a href="img/Q1SHE_OrganicSocial_FacebookTwitter_1200x627.gif" target="_blank"> 
-				<img src="img/Q1SHE_OrganicSocial_FacebookTwitter_1200x627.gif"> </a>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="grid manipulation">
-	<div class="col-1-1">
-		<div class="col-2-3">
-			<div class="project1">
-				<a href="img/SeeHerExcel_Tote.jpg"> 
-				<img src="img/SeeHerExcel_Tote.jpg" target="_blank">
+				<img src="img/section6/LearnGiveGrow.png" target="_blank">
+				<br><br>
+				<img src="img/section6/LearnGiveGrow2.jpg" target="_blank">
+				<br><br><br><br>
+				<img src="img/section6/FreeFridays.gif" target="_blank">
+				<br><br>
+				<img src="img/section6/FreeFridays2.jpg" target="_blank">
+				<br><br><br><br>
+				<img src="img/section6/UXDI.gif" target="_blank">
+				<br><br>
+				<img src="img/section6/UXDI2.jpg" target="_blank">
+				<br><br><br><br>
+				<img src="img/section6/BlackFriday2.gif" target="_blank">
+				<br><br><br><br>
 				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p><b>See Her Excel: Tote</b> Developed for brand awareness to the campaign.</p>
-				</a>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<div class="grid manipulation">
-	<div class="col-1-1">
-		<div class="col-2-3">
-			<div class="project1">
-				<a href="img/SeeHerExcel_Landingpage.png"> 
-				<img src="img/SeeHerExcel_Landingpage.png" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-3">
-			<div class="project1">
-				<p><b>See Her Excel: Landing Page</b> Designed the scholarship's landing page pairing with a marketer and copy writer. Created in the platform Unbounce, the page from top to bottom: displays a high-level description of the offer paired with a dropdown lead form, highlights narratives of women featured in visuals of the campaign, an eye-catching elegibility banner, and descriptions of the courses this scholarship is available for.</p>
-				</a>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<div class="grid manipulation">
-	<div class="col-2-3">
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/Q1SHE_GDNAds_V1_300x600.gif"> 
-				<img src="img/Q1SHE_GDNAds_V1_300x600.gif" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/Q1SHE_GDNAds_V2_300x600.jpg"> 
-				<img src="img/Q1SHE_GDNAds_V2_300x600.jpg" target="_blank">
-			</div>
-		</div>
-	</div>
-	<div class="col-1-3">
-		<div class="project1">
-			<p><b>See Her Excel: Google Display Network Paid Ads</b> Created two sets of scholarship creative to test against eachother. Once tested, the winning concept paired with creative between the ad on the left (animation of rotating photography, straight forward language) and the ad on the right (colorful background with aspirational language highlighting YOU could be the next leader in tech by learning these offered skills), the ad on the left performed better. These results could be based on the inclusion of photography of people and the eye-catching rotation of the .gif.</p>
-			</a>
-		</div>
-	</div>
-</div>
-
-<div class="grid manipulation">
-	<div class="col-2-3">
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/Q1SHE_GDNAds_V1_336x280.gif"> 
-				<img src="img/Q1SHE_GDNAds_V1_336x280.gif" target="_blank">
-				</a>
-			</div>
-		</div>
-		<div class="col-1-2">
-			<div class="project1">
-				<a href="img/Q1SHE_GDNAds_V2_336x280.jpg"> 
-				<img src="img/Q1SHE_GDNAds_V2_336x280.jpg" target="_blank">
 			</div>
 		</div>
 	</div>
@@ -171,13 +104,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
-<!-- 				<a class="overlay" href="sweepstakes.html"> -->
+				<a class="overlay" href="section2.html">
 				  <div class="overlay-text">
-<!-- 					<h1>Studio Photography and Art Direction</h1>
-					<h2>Studio Photography, Photo Editing</h2> -->
+					<h1>See Her Excel Scholarship</h1>
+					<h2>Branding Campaign</h2>
 				  	</div>
 				</a>
-				<img src="img/index/section2.jpg" title="Sweepstakes" alt="Sweepstakes">
+				<img src="img/project6_homepage.png" title="Sweepstakes" alt="Sweepstakes">
 			</div>
 		</div>
 		<div class="col-1-3">
@@ -221,11 +154,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="project1">
 				<a class="overlay" href="section6.html">
 				  <div class="overlay-text">
-				  	<h1>See Her Excel Scholarship</h1>
-					<h2>Marketing Campaign</h2>
+				  	<h1>General Assembly Marketing Campaigns</h1>
+					<h2></h2>
 				  	</div>
 				</a>
-				<img src="img/project6_homepage.png" title="Branding">
+				<img src="img/index/section6.jpg" title="Branding">
 			</div>
 		</div>
 </div>
@@ -248,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<a class="overlay" href="section8.html">
 				  <div class="overlay-text">
 				  	<h1>Immersive Remote Learning</h1>
-					<h2>Marketing Video Campaign</h2>
+					<h2>Video Campaign</h2>
 				  	</div>
 				</a>
 				<img src="img/project8_homepage.jpg" title="Branding">
