--- a/section4.html
+++ b/section4.html
@@ -91,7 +91,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<a class="overlay" href="section2.html">
 				  <div class="overlay-text">
 					<h1>See Her Excel Scholarship</h1>
-					<h2>Branding Campaign</h2>
+					<h2>Brand Campaign</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Sweepstakes" alt="Sweepstakes">
@@ -101,8 +101,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="project1">
 				<a class="overlay" href="section3.html">
 				  <div class="overlay-text">
-				  	<h1>Social Media</h1>
-					<h2>Campaigns</h2>
+				  	<h1>Social Media and Paid Advertising</h1>
+					<h2>Digital Campaigns</h2>
 				  	</div>
 				</a>
 				<img src="img/index/section3.jpg" title="SocialMedia" alt="Advertising">
