--- a/section3.html
+++ b/section3.html
@@ -47,7 +47,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 
-<div class="grid head">
+<!-- <div class="grid head">
 		<div class="col-1-1">
 			<div class="projectdescription">
 				<h2>Campaigns</h2>
@@ -55,7 +55,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<p>Various Campaign Developements and social media posts.</p>
 			</div>
 		</div>
-</div>
+</div> -->
 
 
 <div class="grid manipulation">
@@ -67,6 +67,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<img src="img/section3/SocialMedia2.jpg" target="_blank">
 				<br><br>
 				<img src="img/section3/SocialMedia3.jpg" target="_blank">
+				<br><br><br><br>
+				<img src="img/section3/BostonStreetBillboard.gif" target="_blank">
 				</a>
 			</div>
 		</div>
@@ -99,7 +101,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<a class="overlay" href="section2.html">
 				  <div class="overlay-text">
 					<h1>See Her Excel Scholarship</h1>
-					<h2>Branding Campaign</h2>
+					<h2>Brand Campaign</h2>
 				  	</div>
 				</a>
 				<img src="img/project6_homepage.png" title="Sweepstakes" alt="Sweepstakes">
@@ -109,8 +111,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="project1">
 				<a class="overlay" href="section3.html">
 				  <div class="overlay-text">
-				  	<h1>Social Media</h1>
-					<h2>Campaigns</h2>
+				  	<h1>Social Media and Paid Advertising</h1>
+					<h2>Digital Campaigns</h2>
 				  	</div>
 				</a>
 				<img src="img/index/section3.jpg" title="SocialMedia" alt="Advertising">
