--- a/section6.html
+++ b/section6.html
@@ -77,6 +77,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<br><br><br><br>
 				<img src="img/section6/BlackFriday2.gif" target="_blank">
 				<br><br><br><br>
+				<img src="img/section6/B2B.gif" target="_blank">
+				<br><br><br><br>
 				</a>
 			</div>
 		</div>
