--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,7 @@
 	</div>
 	<div class="col-2-3">
 		<h3>Amanda is multidisciplinary designer with over half a decade developing holistic design solutions across a range of challenges.</h3>
-		<p>Originally from Connecticut, she now resides in Brooklyn, NY. She is a methodical creative who is process-oriented, resourceful, and organized.
+		<p>Living in Brooklyn – she is a methodical creative who is process-oriented, resourceful, and organized (aka a virgo).
 		<br><br>
 		<b>Talk to her about:</b> French Bulldogs, good food, biking, shuffleboard, TikTok, and drinking iced coffee year round.</p>
 		<br><br>
