--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,9 @@
 	</div>
 	<div class="col-2-3">
 		<h3>Amanda is multidisciplinary designer with over half a decade developing holistic design solutions across a range of challenges.</h3>
-		<p>Living in Brooklyn – she is a methodical creative who is process-oriented, resourceful, and organized (aka a virgo).
+		<p>She is currently a lead designer at The Knot Worldwide for the brand WeddingPro, where as part of the creative marketing department she develops and designs solutions across the brand.
+		<br><br>
+		Amanada previously designed for tech-education company, General Assembly and publisher, Taunton Press. Living in Brooklyn – she is a methodical creative who is process-oriented, resourceful, and organized (aka a virgo).
 		<br><br>
 		<b>Talk to her about:</b> French Bulldogs, good food, biking, shuffleboard, TikTok, and drinking iced coffee year round.</p>
 		<br><br>
