--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,7 @@
 	</div>
 	<div class="col-2-3">
 		<h3>Amanda is multidisciplinary designer with over half a decade developing holistic design solutions across a range of challenges.</h3>
-		<p>She is currently a lead designer at The Knot Worldwide for the brand WeddingPro, where as part of the creative marketing department she develops and designs solutions across the brand.
+		<p>She is currently a lead designer at The Knot Worldwide for WeddingPro. Part of the creative marketing team, she develops various digital and print solutions for the brand.
 		<br><br>
 		Amanda previously designed for tech-education company, General Assembly and publisher, Taunton Press. Her freelance clients include Bond Vet, Hook & Blade Magazine, and Thomas Crager Beats.
 		<br><br>
