--- a/aboutme.html
+++ b/aboutme.html
@@ -33,14 +33,14 @@
 		</div>
 	</div>
 	<div class="col-2-3">
-		<h3>Amanda is multidisciplinary designer with over half a decade developing holistic design solutions across a range of challenges.</h3>
-		<p>She is currently a lead designer at The Knot Worldwide for WeddingPro. Part of the creative marketing team, she develops various digital and print solutions for the brand.
+		<h3>Hi, I'm Amanda. I'm a brand and marketing focused multidisciplinary designer with over half a decade developing holistic design solutions across a range of challenges.</h3>
+		<p>Currently, you can find me working on the creative services team at The Knot Worldwide – previously at General Assembly.
 		<br><br>
-		Amanda previously designed for tech-education company, General Assembly and publisher, Taunton Press. Her freelance clients include Bond Vet, Hook & Blade Magazine, and Thomas Crager Beats.
+		I enjoy taking on side-projects, my freelance clients include: Bond Vet, Hook & Blade Magazine, and Thomas Crager Beats.
 		<br><br>
-		Currently living in Brooklyn – she is a methodical creative who is process-oriented, resourceful, and organized (aka a virgo).
+		Currently living in Brooklyn – I am a methodical creative who is process-oriented, resourceful, and organized (aka a virgo).
 		<br><br>
-		<b>Talk to her about:</b> French Bulldogs, good food, biking, shuffleboard, TikTok, and drinking iced coffee year round.</p>
+		<b>Talk to me about:</b> French Bulldogs, good food, biking, shuffleboard, TikTok, and drinking iced coffee year round.</p>
 		<br><br>
 	</div>
 </div>
