--- a/section2.html
+++ b/section2.html
@@ -162,8 +162,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="project1">
 				<a class="overlay" href="section1.html">
 				  <div class="overlay-text">
-					<h1>Email Design</h1>
-					<h2>Branding, Templates</h2>
+					<h1>Bond Vet</h1>
+					<h2>Brand Marketing Assets</h2>
 				  	</div>
 				</a>
 				<img src="img/index/section1.jpg" title="Sweepstakes">
@@ -177,7 +177,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<h2>Brand Campaign</h2>
 				  	</div>
 				</a>
-				<img src="img/project6_homepage.png" title="Sweepstakes" alt="Sweepstakes">
+				<img src="img/index/section2.png" title="Sweepstakes" alt="Sweepstakes">
 			</div>
 		</div>
 		<div class="col-1-3">
