--- a/section1.html
+++ b/section1.html
@@ -63,9 +63,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="col-1-1">
 		<div class="col-1-1">
 			<div class="project1">
-				<img src="img/section1/Email1.jpg" target="_blank">
+				<img src="img/section1/BondVet1.jpg" target="_blank">
 				<br><br>
-				<img src="img/section1/Email2.jpg" target="_blank">
+				<img src="img/section1/BondVet2.jpg" target="_blank">
+				<br><br>
+				<img src="img/section1/BondVet3.jpg" target="_blank">
+				<br><br>
+				<img src="img/section1/BondVet4.jpg" target="_blank">
 				</a>
 			</div>
 		</div>
@@ -85,8 +89,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="project1">
 				<a class="overlay" href="section1.html">
 				  <div class="overlay-text">
-					<h1>Email Design</h1>
-					<h2>Branding, Templates</h2>
+					<h1>Bond Vet</h1>
+					<h2>Brand Marketing Assets</h2>
 				  	</div>
 				</a>
 				<img src="img/index/section1.jpg" title="Sweepstakes">
@@ -97,18 +101,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<a class="overlay" href="section2.html">
 				  <div class="overlay-text">
 					<h1>See Her Excel Scholarship</h1>
-					<h2>Branding Campaign</h2>
+					<h2>Brand Campaign</h2>
 				  	</div>
 				</a>
-				<img src="img/project6_homepage.png" title="Sweepstakes" alt="Sweepstakes">
+				<img src="img/index/section2.png" title="Sweepstakes" alt="Sweepstakes">
 			</div>
 		</div>
 		<div class="col-1-3">
 			<div class="project1">
 				<a class="overlay" href="section3.html">
 				  <div class="overlay-text">
-				  	<h1>Social Media</h1>
-					<h2>Campaigns</h2>
+				  	<h1>Social Media and Paid Advertising</h1>
+					<h2>Digital Campaigns</h2>
 				  	</div>
 				</a>
 				<img src="img/index/section3.jpg" title="SocialMedia" alt="Advertising">
