--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a href="section7.html"><span>Wired</span></a><br> -->
 
                 <br><br>
-                <a href="aboutme.html"><span>About Me</span></a><br>
+                <a href="aboutme.html"><span>About Amanda</span></a><br>
 
                  
                 
