--- a/aboutme.html
+++ b/aboutme.html
@@ -51,9 +51,24 @@
      <div class="services">
 
          <div class="description">
-					Amanda is a brand marketing focused designer and creative with over 8+ years experience in visual design, branding, and strategy. 
-<br><br>
-					She love competitive shuffleboard. biking. french bulldogs. 
+					Amanda is brand and marketing focused multidisciplinary designer based in Park Slope, Brooklyn. She has previously worked with a range of tech and start-up companies spanning edtech, weddings, high-end veterinary care, and human-grade dog food – of which she enjoys developing and maintaining brands as an in-house designer for mission driven companies. 
+         <br><BR>
+          She believes design isn't just about aesthetics; it's about ensuring functionality – and loves working with teammates who collaborate and challenge one-another. Her skill-set ranges from branding and identity, to art direction, digital and print campaign design, packaging, iconography, photography, social media design, websites, UI design & more.
+					<br><br>
+          When not designing – she enjoys:
+	<ul>
+  <li>Spending time with her French Bulldog, Lady</li>
+  <li>Playing in a competitive shuffleboard league</li>
+  <li>Plotting her next dinner reservation at her favorite spots</li>
+   <li>Being someone with an iced coffee in their hand year-round</li>
+ 	</ul>
+					<br>
+					Thanks for stopping by! Drop me a line
+
+
+
+
+
 					<br><br>
 
          	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
