--- a/section1.html
+++ b/section1.html
@@ -36,7 +36,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="index.html">Select Work —</a><br><span>PetPlate Supplements</span></p>
+            <p><a href="index.html">Select Work —</a><br><span>Supplements for Dogs</span></p>
       </div>
 
         <div class="contact">
