--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
          <div class="description">
 					Amanda is brand and marketing focused multidisciplinary designer based in Park Slope, Brooklyn. She has previously worked with a range of tech and start-up companies spanning edtech, weddings, high-end veterinary care, and human-grade dog food – of which she enjoys developing and maintaining brands as an in-house designer for mission driven companies. 
          <br><BR>
-          She believes design isn't just about aesthetics; it's about ensuring functionality – and loves working with teammates who collaborate and challenge one-another. Her skill-set ranges from branding and identity, to art direction, digital and print campaign design, packaging, iconography, photography, social media design, websites, UI design & more.
+          She believes design isn't just about aesthetics; it's about ensuring functionality – and loves working with teammates who collaborate and challenge one-another. Her skill-set ranges from branding and identity, to art direction, digital and print campaign design, packaging, iconography, photography, social media design, websites, UI design & more. She enjoys creating design structure and takes a methodical approach to her work.
 					<br><br>
           When not designing – she enjoys:
 	<ul>
