--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,11 @@
 
     <div class="nav-mobile">
   
-        <p>Amanda Jennings is a designer based in Brooklyn, NY<br>Contact: jenningsab@icloud.com</p><br>
+        <p>Amanda Jennings is a designer based in Brooklyn, NY
+        	<br>Contact: jenningsab@icloud.com
+        	<br><br>Resume | Linkedin
+
+        </p><br>
   
     </div>
 
@@ -51,19 +55,19 @@
      <div class="services">
 
          <div class="description">
-					Amanda is brand and marketing focused multidisciplinary designer based in Park Slope, Brooklyn. She has previously worked with a range of tech and start-up companies spanning edtech, weddings, high-end veterinary care, and human-grade dog food – of which she enjoys developing and maintaining brands as an in-house designer for mission driven companies. 
+					Amanda is brand and marketing focused multidisciplinary designer based in Brooklyn, NY. She has previously worked with a range of tech and start-up companies spanning edtech, weddings, high-end veterinary care, and human-grade dog food – of which she enjoys developing and maintaining brands as an in-house designer for mission driven companies. 
          <br><BR>
           She believes design isn't just about aesthetics; it's about ensuring functionality – and loves working with teammates who collaborate and challenge one-another. Her skill-set ranges from branding and identity, to art direction, digital and print campaign design, packaging, iconography, photography, social media design, websites, UI design & more. She enjoys creating design structure and takes a methodical approach to her work.
 					<br><br>
           When not designing – she enjoys:
 	<ul>
-  <li>Spending time with her French Bulldog, Lady</li>
+  <li>Spending time with her partner and French Bulldog, Lady</li>
   <li>Playing in a competitive shuffleboard league</li>
-  <li>Plotting her next dinner reservation at her favorite spots</li>
+  <li>Plotting her next dinner reservation around the city</li>
    <li>Being someone with an iced coffee in their hand year-round</li>
  	</ul>
 					<br>
-					Thanks for stopping by! Drop me a line
+					Thanks for stopping by!
 
 
 
