--- a/section1.html
+++ b/section1.html
@@ -36,7 +36,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="index.html">Select Work —</a><br><span>Supplements for Dogs</span></p>
+            <p><a href="index.html">Select Work —</a><br><span>Dog Supplements</span></p>
       </div>
 
         <div class="contact">
@@ -55,11 +55,11 @@
 					<br>
 					PetPlate offers a selection of vet-designed, human-grade whole ingredient food options for dogs. The objective was to shift from a previous packaging style and naming that resembled dog treats to a new design and positioning that accurately conveyed the products as functional soft chew supplements with beneficial ingredients. 
 					<br><br>
-					The visual aesthetics of the sub-branding for these supplements aimed to capture an apothecary feel, evoking the notion of providing beneficial ingredients akin to medicine while prioritizing palatability for dogs' consumption.
+					The visual identity for these supplements captures a warm apothecary feel, evoking the notion of providing beneficial ingredients akin to medicine while prioritizing palatability for dogs' consumption, through flavor.
 					<br><br>
-					<b/>Role</b>
+					<b/>Roles</b>
 					<br>
-					Packaging Design | Art Direction | Assisted in Set Design | Proud Dog Model Mom
+					Branding | Packaging Design | Art Direction | Assisted in Set Design | Proud Dog Model Mom
          	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
 <br>
