--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
 
     <div class="nav">
   
-        <p>Amanda Jennings is a designer based in Brooklyn, NY</p><br>
+        <p>Amanda Jennings is a designer based in Brooklyn, NY
+        	
+				</p><br>
   
     </div>
+
+
 
 
 
@@ -53,12 +57,12 @@
 
     <div id="div2">
           <div class="services">
-                <a href="section1.html"><span>Supplements for Dogs</span></a><br>
+                <a href="section1.html"><span>Dog Supplements</span></a><br>
 <!--                 <a href="section2.html"><span>Casper</span></a><br> -->
                 <a href="section3.html"><span>PetPlate at Global Pet Expo</span></a><br>
                 <a href="section4.html"><span>CE & The City</span></a><br>  
-<!--                 <a href="section5.html"><span>Architectural Digest</span></a><br>
-                <a href="section6.html"><span>Vogue</span></a><br>
+                <a href="section5.html"><span>GA Remote Learning</span></a><br>
+<!--                 <a href="section6.html"><span>Vogue</span></a><br>
                 <a href="section7.html"><span>Wired</span></a><br> -->
 
                 <br><br>
