--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
     <div id="div2">
           <div class="services">
-                <a href="section1.html"><span>Dog Supplements</span></a><br>
-<!--                 <a href="section2.html"><span>Casper</span></a><br> -->
-                <a href="section3.html"><span>PetPlate at Global Pet Expo</span></a><br>
+                <a href="section1.html"><span>PetPlate Supplements</span></a><br>
+                <a href="section2.html"><span>PetPlate Preferred 2:1 Campaign</span></a><br>
+                <a href="section3.html"><span>Global Pet Expo Booth</span></a><br>
                 <a href="section4.html"><span>CE & The City</span></a><br>  
                 <a href="section5.html"><span>GA Remote Learning</span></a><br>
 <!--                 <a href="section6.html"><span>Vogue</span></a><br>
