--- a/section2.html
+++ b/section2.html
@@ -49,18 +49,18 @@
 
 <div id="div2">
      <div class="services">
-<!-- 
+
          <div class="description">
          	<b>Description</b>
 					<br>
-					PetPlate offers a selection of vet-designed, human-grade whole ingredient food options for dogs. The objective was to shift from a previous packaging style and naming that resembled dog treats to a new design and positioning that accurately conveyed the products as functional soft chew supplements with beneficial ingredients. 
+					With PetPlate’s switch in manufacturers and cooking techniques, this campaign was developed to showcase the improvements made to their meals with more noticeable chunks of meat and vegetables. To support this narrative, a focus group consisting of dogs of different ages, sizes, and breeds was conducted, and the results showed that the majority of dogs preferred the new recipe by a ratio of 2:1.
 					<br><br>
-					The visual identity for these supplements captures a warm apothecary feel, evoking the notion of providing beneficial ingredients akin to medicine while prioritizing palatability for dogs' consumption, through flavor.
+					To visually convey these enhancements, the  prominently feature the bowl, making it the main focus and providing a close-up view of the improved formula.
 					<br><br>
 					<b/>Roles</b>
 					<br>
-					Branding | Packaging Design | Art Direction | Assisted in Set Design | Proud Dog Model Mom
-         	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div> -->
+					Campaign Creative Direction | Graphic Design
+         	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
 <br>
 
