--- a/section2.html
+++ b/section2.html
@@ -53,13 +53,13 @@
          <div class="description">
          	<b>Description</b>
 					<br>
-					With PetPlate’s switch in manufacturers and cooking techniques, this campaign was developed to showcase the improvements made to their meals with more noticeable chunks of meat and vegetables. To support this narrative, a focus group consisting of dogs of different ages, sizes, and breeds was conducted, and the results showed that the majority of dogs preferred the new recipe by a ratio of 2:1.
+					With PetPlate’s switch in manufacturers and cooking techniques, this marketing campaign was developed to showcase the improvements made to the meals with more noticeable chunks of meat and vegetables. To support this narrative, a focus group consisting of dogs of different ages, sizes, and breeds was conducted, and the results showed the majority of dogs preferred the new recipe by a ratio of 2:1.
 					<br><br>
-					To visually convey these enhancements, the  prominently feature the bowl, making it the main focus and providing a close-up view of the improved formula.
+					To visually convey these enhancements, the meals top-down are shown prominently, making it the main focus and providing a close-up view of the improved formula.
 					<br><br>
 					<b/>Roles</b>
 					<br>
-					Campaign Creative Direction | Graphic Design
+					Marketing Campaign Creative Direction | Design
          	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
 <br>
