--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0 minimal-ui">
         <link rel="stylesheet" href="style.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <link rel="icon" href="img/spin.png">
+        <link rel="shortcut icon" type="image/jpg" href="img/index/blackheart.png"/>
 
     <meta name="description" content="Design Portfolio of Amanda Jennings">
     <meta name="keywords" content="Graphic Design, Design, Design Portfolio, Digital Design, Print Design, Marketing Design, Portfolio Site, Amanda Jennings, ">
@@ -60,10 +60,10 @@
                 <a href="section1.html"><span>PetPlate Supplements</span></a><br>
                 <a href="section2.html"><span>PetPlate Preferred 2:1 Campaign</span></a><br>
                 <a href="section3.html"><span>Global Pet Expo Booth</span></a><br>
+                <a href="section6.html"><span>BondVet OOH</span></a><br>
                 <a href="section4.html"><span>CE & The City</span></a><br>  
                 <a href="section5.html"><span>GA Remote Learning</span></a><br>
-<!--                 <a href="section6.html"><span>Vogue</span></a><br>
-                <a href="section7.html"><span>Wired</span></a><br> -->
+<!--                 <a href="section7.html"><span>Wired</span></a><br> -->
 
                 <br><br>
                 <a href="aboutme.html"><span>About Amanda</span></a><br>
