--- a/section4.html
+++ b/section4.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0 minimal-ui">
         <link rel="stylesheet" href="style.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <link rel="icon" href="img/spin.png">
+        <link rel="shortcut icon" type="image/jpg" href="img/index/blackheart.png"/>
 
     <meta name="description" content="Amanda Jennings — PetPlate Supplements">
     <meta name="keywords" content="Graphic Design, Design, Design Portfolio, Digital Design, Print Design, Marketing Design, Portfolio Site, Amanda Jennings, ">
