--- a/section3.html
+++ b/section3.html
@@ -50,17 +50,22 @@
 <div id="div2">
      <div class="services">
 
-         <!-- <div class="description">
+         <div class="description">
          	<b>Description</b>
 					<br>
-					PetPlate offers a selection of vet-designed, human-grade whole ingredient food options for dogs. The objective was to shift from a previous packaging style and naming that resembled dog treats to a new design and positioning that accurately conveyed the products as functional soft chew supplements with beneficial ingredients. 
-					<br><br>
-					The visual aesthetics of the sub-branding for these supplements aimed to capture an apothecary feel, evoking the notion of providing beneficial ingredients akin to medicine while prioritizing palatability for dogs' consumption.
+					Established creative direction of PetPlate's first booth at an international trade show displaying the latest pet products for industry professionals around the world. 
 					<br><br>
 					<b/>Role</b>
 					<br>
-					Packaging Design | Art Direction | Assisted in Set Design | Proud Dog Model Mom
-         	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div> -->
+					 Art Direction | Design 
+                    <br><br>
+                    <b/>Testimonials</b>
+                    <br>
+                    "{Major shout out to the creative team}. We have demolished the show so far. So many people have told us they didn't know we were here until they were in the area and saw the giant cup and booth. We've been repeatedly told 'the brand and booth has stopping power' and 'they can't believe our booth for a first time vendor.'"
+                    <br><br>
+                    "Someone told me we have a 'Blue Buffalo quality booth' when it comes to branding and creative – which is a huge compliment."
+
+         	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
 <br>
 
