--- a/section3.html
+++ b/section3.html
@@ -61,9 +61,9 @@
                     <br><br>
                     <b/>Testimonials</b>
                     <br>
-                    "{Major shout out to the creative team}. We have demolished the show so far. So many people have told us they didn't know we were here until they were in the area and saw the giant cup and booth. We've been repeatedly told 'the brand and booth has stopping power' and 'they can't believe our booth for a first time vendor.'"
+                    "{Major shout out to the creative team}. We have demolished the show so far. So many people have told us they didn't know we were here until they were in the area and saw the giant cup and booth. We've been repeatedly told 'the brand and booth has stopping power' and 'they can't believe our booth for a first time vendor.'" – National Sales Director, PetPlate
                     <br><br>
-                    "Someone told me we have a 'Blue Buffalo quality booth' when it comes to branding and creative – which is a huge compliment."
+                    "Someone told me we have a 'Blue Buffalo quality booth' when it comes to branding and creative – which is a huge compliment." – National Sales Director, PetPlate
 
          	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
