--- a/section3.html
+++ b/section3.html
@@ -54,16 +54,19 @@
          	<b>Description</b>
 					<br>
 					Established creative direction of PetPlate's first booth at an international trade show displaying the latest pet products for industry professionals around the world. 
-					<br><br>
-					<b/>Role</b>
-					<br>
-					 Art Direction | Design 
                     <br><br>
+                    The booth's aesthetic takes inspiration from a sophisticated café ambiance, featuring menu displays showcasing PetPlate's entree offerings and supplements.
+					<br><br>
                     <b/>Testimonials</b>
                     <br>
                     "{Major shout out to the creative team}. We have demolished the show so far. So many people have told us they didn't know we were here until they were in the area and saw the giant cup and booth. We've been repeatedly told 'the brand and booth has stopping power' and 'they can't believe our booth for a first time vendor.'" – National Sales Director, PetPlate
                     <br><br>
                     "Someone told me we have a 'Blue Buffalo quality booth' when it comes to branding and creative – which is a huge compliment." – National Sales Director, PetPlate
+                    <br><br>
+                    <b/>Role</b>
+                    <br>
+                    Creative Direction | Design 
+                    
 
          	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
