--- a/section1.html
+++ b/section1.html
@@ -104,10 +104,13 @@
           <div class="description">   <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
       </div>
 
-  <br><br>
-         
+
+<div class="description">
+            <b>Photography produced with: Garnish Studios</b>
+            <span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
+
     </div>
-   
+<br>   
 
 </div>
 
