--- a/section4.html
+++ b/section4.html
@@ -50,17 +50,19 @@
 <div id="div2">
      <div class="services">
 
-         <!-- <div class="description">
+         <div class="description">
          	<b>Description</b>
 					<br>
-					PetPlate offers a selection of vet-designed, human-grade whole ingredient food options for dogs. The objective was to shift from a previous packaging style and naming that resembled dog treats to a new design and positioning that accurately conveyed the products as functional soft chew supplements with beneficial ingredients. 
+			         CE & The City offers continuing education and networking opportunities for veterinary professionals. 
+                    <br><br>
+                    The name of the brand, 'CE & The City', draws inspiration from the popular TV show "Sex & The City" and represents a chic and modern approach to experiencing continuing education courses. The objective of the brand is to create the finest CE event series in the city, featuring courses taught at beautiful hotels, providing exceptional food and drinks, and opportunities for veterinary networking.
 					<br><br>
-					The visual aesthetics of the sub-branding for these supplements aimed to capture an apothecary feel, evoking the notion of providing beneficial ingredients akin to medicine while prioritizing palatability for dogs' consumption.
+					The branding elicits emotions of excitement, inspiration, aspiration, authority, and a sense of community. The overall atmosphere embodies the idea of coming together to learn and elevate the industry.
 					<br><br>
 					<b/>Role</b>
 					<br>
-					Packaging Design | Art Direction | Assisted in Set Design | Proud Dog Model Mom
-         	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div> -->
+					Brand Identity | Graphic Design 
+         	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
 <br>
 
