--- a/section6.html
+++ b/section6.html
@@ -51,7 +51,7 @@
      <div class="services">
 
          <div class="description">
-         	<!-- <b>Description</b> -->
+<!--          	<b>Description</b> -->
 <!-- 					<br>
 					General Assembly offers varrying formats of courses in tech, pioneering education and career transformation. In launching remote full-time formats of popular in-person courses, I was part of a team that developed a video campaign to drive awareness to the new online format.
 					<br><br>
@@ -60,7 +60,7 @@
 					<br><br>
 					<b/>Roles</b>
 					<br>
-					Freelance Designer | Concept Development
+					Freelance Designer | Concept
          	<span>&nbsp;&nbsp;&#9726; &nbsp;Design &nbsp;&nbsp;&#9726; &nbsp;Art Direction</span></div>
 
 <br>
