--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 <a href="section2.html"><span>PetPlate Preferred 2:1 Campaign</span></a><br>
                 <a href="section3.html"><span>Global Pet Expo Booth</span></a><br>
                 <a href="section6.html"><span>BondVet OOH</span></a><br>
-                <a href="section4.html"><span>CE & The City</span></a><br>  
+                <a href="section4.html"><span>CE & The City</span></a><br>
+                <a href="section7.html"><span>GA Marketing Campaigns</span></a><br>  
                 <a href="section5.html"><span>GA Remote Learning</span></a><br>
-<!--                 <a href="section7.html"><span>Wired</span></a><br> -->
 
                 <br><br>
                 <a href="aboutme.html"><span>About Amanda</span></a><br>
