--- a/section5.html
+++ b/section5.html
@@ -36,7 +36,7 @@
 
     <div id="div1">     
       <div class="title">
-            <p><a href="index.html">Select Work —</a><br><span>GA Remote Learning</span></p>
+            <p><a href="index.html">Select Work —</a><br><span>GA Remote <br>Learning Video</span></p>
       </div>
 
         <div class="contact">
