--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
 
     <div id="div2">
           <div class="services">
-                <a href="section1.html"><span>PetPlate Supplements</span></a><br>
                 <a href="section2.html"><span>PetPlate Preferred 2:1 Campaign</span></a><br>
+                <a href="section1.html"><span>PetPlate Supplements</span></a><br>
                 <a href="section3.html"><span>Global Pet Expo Booth</span></a><br>
-                <a href="section6.html"><span>BondVet OOH</span></a><br>
+                <a href="section6.html"><span>BondVet</span></a><br>
                 <a href="section4.html"><span>CE & The City</span></a><br>
+                <a href="section9.html"><span>Hook & Blade – OnHand</span></a><br>
                 <a href="section8.html"><span>WeddingPro Insights</span></a><br>
                 <a href="section7.html"><span>GA Marketing Campaigns</span></a><br>  
                 <a href="section5.html"><span>GA Remote Learning Video</span></a><br>
