--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
     <div id="div2">
           <div class="services">
-                <a href="section2.html"><span>PetPlate Preferred 2:1 Campaign</span></a><br>
+                <a href="section2.html"><p class="one"><span>PetPlate Preferred 2:1 Campaign</span></a><br>
+
                 <a href="section1.html"><span>PetPlate Supplements</span></a><br>
                 <a href="section3.html"><span>Global Pet Expo Booth</span></a><br>
                 <a href="section6.html"><span>BondVet</span></a><br>
